--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<title>Home page</title>
 </head>
 <body>
   <div class="main_container">
-    <h1>Hello Kitty Super Mors!</h1>
+	  <h1>Hello Kitty Super Mors!</h1>
+	  <p th:text="name"/>
   </div>
 </body>
 </html>
