--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8">
-	<title>Home page</title>
+    <meta charset="UTF-8">
+    <title>About us</title>
 </head>
 <body>
   <div class="main_container">
-	  <h1>Hello Kitty Super Mors!</h1>
-	  <p th:text="${name}"/>
+      <h1>Lorem ipsum dolor sit amet.</h1>
+      <p th:text="'Hello, ' + ${name} + '!'"/>
   </div>
 </body>
 </html>
