Adds Items class in model dir and ItemRepository class in repository dir, also index file was modified for display item cards from database and added css styles for them

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -63,7 +63,7 @@ div.block {
     width: 100%;
     background: #ff6447;
     padding: 50px 200px;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     margin-bottom: 70px;
 }
 
@@ -83,7 +83,42 @@ div.block {
     width: 350px;
 }
 
+.items {
+    display: flex;
+    float: left;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.items > div {
+    width: 30%;
+    margin-bottom: 30px;
+    background: #333;
+    padding: 30px;
+}
+
+.items > div h3 {
+    color: #fff;
+    margin: 7px 0;
+    font-size: 23px;
+}
+
+.items > div p {
+    color: #a7a7a7;
+}
+
+.items > div span {
+    background: #fdbd01;
+    padding: 10px;
+    position: relative;
+    top: 30px;
+    font-weight: 600;
+    color: #6a5412;
+}
+
 footer {
+    float: left;
+    width: 100%;
     margin-top: 15px;
     margin-bottom: 100px;
     text-align: center;
