--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -3,5 +3,6 @@
   <nav>
     <a href="/">Home page</a>
     <a href="/about-us">About us</a>
+    <a href="/items/add">Add product</a>
   </nav>
 </header>
